[project]
name = "form-bin"
version = "5.0.0a1"
description = "The FORM project for symbolic manipulation of very big expressions"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"

[project.urls]
homepage = "https://www.nikhef.nl/~form"
source = "https://github.com/form-dev/form"
documentation = "https://form-dev.github.io/form-docs/stable/manual/"
issues = "https://github.com/form-dev/form/issues"
wiki = "https://github.com/form-dev/form/wiki"
discussions = "https://github.com/form-dev/form/discussions"

[build-system]
requires = ["enscons~=0.26", "toml~=0.10", "packaging>=20.5"]
build-backend = "enscons.api"

[project.scripts]
form = "form.__main__:main"
